fixed overflow of too long document names

--- a/src/app/collab/components/document-tree/document-tree.component.scss
+++ b/src/app/collab/components/document-tree/document-tree.component.scss
@@ -36,6 +36,8 @@
 
 .document-tree__overall-container {
     width: 300px;
+    overflow: hidden;
+    padding-left: 16px;
 }
 
 .document-tree__name {
